11225424: expands the test setup code to make changes as well as just assemble the data